--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         .other-dates { font-size: 0.9rem; opacity: 0.8; }
         
         .countdown { 
-            background: #ea580c; color: white; padding: 8px 20px; 
+            background: #00ffff; color: white; padding: 8px 20px; 
             border-radius: 50px; font-weight: bold; font-size: 0.9rem;
             box-shadow: 0 4px 10px rgba(0,0,0,0.3);
         }
