--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
         /* بەشی کاتی ماوە وەک داوات کردبوو گەورەتر و بەرەو سەرەوە */
         .countdown { 
-            background: #ea580c; color: white; padding: 12px 25px; 
+            background: #5865f2; color: white; padding: 12px 25px; 
             border-radius: 15px; font-weight: bold; font-size: 1.1rem;
             box-shadow: 0 4px 15px rgba(0,0,0,0.4); margin: -5px 0 15px 0; 
             width: 90%; text-align: center;
