--- a/index.html
+++ b/index.html
@@ -6,28 +6,27 @@
     <title>کاتەکانی بانگ</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        :root { --main-bg: #0f172a; --card-bg: #1e293b; --accent: #38bdf8; --sidebar-bg: #111827; }
+        :root { --main-bg: #0f172a; --card-bg: #1e293b; --accent: #38bdf8; }
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body { 
             background: var(--main-bg); color: white; font-family: 'Segoe UI', sans-serif; 
-            height: 100vh; display: flex; flex-direction: column; overflow: hidden;
+            min-height: 100vh; display: flex; flex-direction: column; 
         }
         .navbar { 
             display: flex; justify-content: space-between; align-items: center; 
-            padding: 0 20px; background: var(--card-bg); height: 60px;
-            border-bottom: 1px solid rgba(255,255,255,0.05);
+            padding: 0 20px; background: var(--card-bg); height: 55px; border-bottom: 1px solid rgba(255,255,255,0.05);
         }
         .main-container { 
             flex: 1; display: flex; flex-direction: column; align-items: center; 
-            padding: 10px 20px; width: 100%; max-width: 450px; margin: 0 auto; overflow-y: auto;
+            padding: 15px 20px; width: 100%; max-width: 450px; margin: 0 auto;
         }
-        .clock-container { text-align: center; margin-top: 5px; }
+        .clock-container { text-align: center; margin-bottom: 10px; }
         .clock { font-size: 3.5rem; font-weight: bold; font-family: monospace; }
-        .ampm { font-size: 1.2rem; color: var(--accent); }
-        .date-section { text-align: center; margin: 10px 0; }
+        .ampm { font-size: 1.2rem; color: var(--accent); font-weight: bold; }
+        .date-section { text-align: center; margin-bottom: 15px; }
         #dateHijri { font-weight: bold; font-size: 1.3rem; color: var(--accent); }
         .countdown { 
-            background: #5865f2; padding: 12px; border-radius: 12px; 
+            background: #5865f2; color: white; padding: 12px; border-radius: 12px; 
             width: 100%; text-align: center; margin-bottom: 15px; font-weight: bold;
         }
         select { 
@@ -36,29 +35,16 @@
         }
         .prayer-list { width: 100%; display: flex; flex-direction: column; gap: 8px; }
         .prayer-row { 
-            display: flex; justify-content: space-between; padding: 15px; 
+            display: flex; justify-content: space-between; padding: 14px 18px; 
             background: var(--card-bg); border-radius: 12px; align-items: center;
         }
-        .time { font-family: monospace; font-size: 1.4rem; color: var(--accent); font-weight: bold; }
-        
-        /* Sidebar */
-        .sidebar { position: fixed; top: 0; right: -280px; width: 280px; height: 100%; background: var(--sidebar-bg); z-index: 1000; transition: 0.4s; padding: 20px; }
-        .sidebar.active { right: 0; }
-        .overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); display: none; z-index: 999; }
-        .overlay.active { display: block; }
-        .sidebar-item { padding: 15px 0; border-bottom: 1px solid #334155; cursor: pointer; }
+        .time { font-family: monospace; font-size: 1.5rem; color: var(--accent); font-weight: bold; }
     </style>
 </head>
 <body>
     <div class="navbar">
         <div style="font-weight: bold;">کاتەکانی بانگ</div>
-        <i class="fas fa-bars" onclick="toggleMenu()" style="cursor:pointer; font-size: 1.5rem; color: var(--accent);"></i>
-    </div>
-
-    <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
-    <div class="sidebar" id="sidebar">
-        <h3>ڕێکخستنەکان</h3><br>
-        <div class="sidebar-item" onclick="alert('گەشەپێدەر: داریان')">دەربارە</div>
+        <i class="fas fa-bars" style="color: var(--accent);"></i>
     </div>
 
     <div class="main-container">
@@ -66,31 +52,21 @@
             <span class="clock" id="liveClock">00:00:00</span>
             <span class="ampm" id="ampm">AM</span>
         </div>
-
         <div class="date-section">
             <div id="dateHijri">بارکردن...</div>
-            <div id="dateKurdi" style="margin-top:5px; opacity:0.8;"></div>
-            <div id="dateMiladi" style="opacity:0.8;"></div>
+            <div style="font-size: 1.1rem; margin-top: 4px;">کوردی: ٣ی ڕێبەندی ٢٧٢٥</div>
+            <div id="dateMiladi" style="opacity: 0.7; font-size: 0.9rem;"></div>
         </div>
-
         <div id="timerDisplay" class="countdown">چاوەڕێ بکە...</div>
-
-        <select id="citySelect" onchange="fetchPrayers(this.value)">
+        <select id="citySelect">
             <option value="Penjwin">پێنجوێن</option>
             <option value="Sulaymaniyah">سلێمانی</option>
             <option value="Erbil">هەولێر</option>
         </select>
-
         <div class="prayer-list" id="prayerList"></div>
     </div>
 
     <audio id="adhanPlayer"></audio>
     <script src="script.js"></script>
-    <script>
-        function toggleMenu() { 
-            document.getElementById('sidebar').classList.toggle('active'); 
-            document.getElementById('overlay').classList.toggle('active'); 
-        }
-    </script>
 </body>
 </html>
