--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
         }
         .navbar { 
             display: flex; justify-content: space-between; align-items: center; 
-            padding: 0 20px; background: var(--card-bg); height: 60px; border-bottom: 1px solid rgba(255,255,255,0.05);
+            padding: 0 20px; background: var(--card-bg); height: 60px; border-bottom: 1px solid rgba(255,255,255,0.05); 
         }
         .main-container { 
             flex: 1; display: flex; flex-direction: column; align-items: center; 
-            padding: 15px 20px; width: 100%; max-width: 450px; margin: 0 auto;
+            padding: 15px 20px; width: 100%; max-width: 450px; margin: 0 auto; 
         }
         .clock-container { text-align: center; margin-bottom: 10px; }
-        .clock { font-size: 3.5rem; font-weight: bold; font-family: monospace; }
+        .clock { font-size: 3.2rem; font-weight: bold; font-family: monospace; }
         .ampm { font-size: 1.2rem; color: var(--accent); font-weight: bold; }
         .date-section { text-align: center; margin-bottom: 15px; }
         #dateHijri { font-weight: bold; font-size: 1.3rem; color: var(--accent); }
         .countdown { 
             background: #5865f2; color: white; padding: 12px; border-radius: 12px; 
-            width: 100%; text-align: center; margin-bottom: 15px; font-weight: bold;
+            width: 100%; text-align: center; margin-bottom: 15px; font-weight: bold; font-size: 1.1rem;
         }
         select { 
             width: 100%; height: 45px; border-radius: 10px; background: var(--card-bg); 
@@ -51,7 +51,7 @@
 <body>
     <div class="navbar">
         <div style="font-weight: bold;">کاتەکانی بانگ</div>
-        <i class="fas fa-bars" onclick="toggleMenu()" style="color: var(--accent); cursor: pointer; font-size: 1.7rem;"></i>
+        <i class="fas fa-bars" onclick="toggleMenu()" style="color: var(--accent); cursor: pointer; font-size: 1.9rem;"></i>
     </div>
 
     <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
