--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
             padding: 15px 20px; width: 100%; max-width: 450px; margin: 0 auto; 
         }
         .clock-container { text-align: center; margin-bottom: 10px; }
-        .clock { font-size: 3.2rem; font-weight: bold; font-family: monospace; }
+        .clock { font-size: 3.0rem; font-weight: bold; font-family: monospace; }
         .ampm { font-size: 1.2rem; color: var(--accent); font-weight: bold; }
         .date-section { text-align: center; margin-bottom: 15px; }
         #dateHijri { font-weight: bold; font-size: 1.3rem; color: var(--accent); }
         .countdown { 
             background: #5865f2; color: white; padding: 12px; border-radius: 12px; 
-            width: 100%; text-align: center; margin-bottom: 15px; font-weight: bold; font-size: 1.1rem;
+            width: 100%; text-align: center; margin-bottom: 15px; font-weight: bold; font-size: 1.2rem;
         }
         select { 
             width: 100%; height: 45px; border-radius: 10px; background: var(--card-bg); 
@@ -51,7 +51,7 @@
 <body>
     <div class="navbar">
         <div style="font-weight: bold;">کاتەکانی بانگ</div>
-        <i class="fas fa-bars" onclick="toggleMenu()" style="color: var(--accent); cursor: pointer; font-size: 1.9rem;"></i>
+        <i class="fas fa-bars" onclick="toggleMenu()" style="color: var(--accent); cursor: pointer; font-size: 2.1rem;"></i>
     </div>
 
     <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
@@ -80,6 +80,7 @@
             <div id="dateMiladi" style="opacity: 0.7; font-size: 0.9rem;"></div>
         </div>
         <div id="timerDisplay" class="countdown">چاوەڕێ بکە...</div>
+        <div style="font-size: 2rem;
         <select id="citySelect">
             <option value="Penjwin">پێنجوێن</option>
             <option value="Sulaymaniyah">سلێمانی</option>
