--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         #dateHijri { font-weight: bold; font-size: 1.3rem; color: var(--accent); }
         .countdown { 
             background: #5865f2; color: white; padding: 12px; border-radius: 12px; 
-            width: 100%; text-align: center; margin-bottom: 15px; font-weight: bold; font-size: 1.2rem;
+            width: 100%; text-align: center; margin-bottom: 15px; font-weight: bold;
         }
         select { 
             width: 100%; height: 45px; border-radius: 10px; background: var(--card-bg); 
@@ -80,7 +80,7 @@
             <div id="dateMiladi" style="opacity: 0.7; font-size: 0.9rem;"></div>
         </div>
         <div id="timerDisplay" class="countdown">چاوەڕێ بکە...</div>
-        <div style="font-size: 2rem;
+        <div style="font-size: 2rem;</div>
         <select id="citySelect">
             <option value="Penjwin">پێنجوێن</option>
             <option value="Sulaymaniyah">سلێمانی</option>
