--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         <div class="date-section">
             <div id="dateHijri">بارکردن...</div>
-            <div style="font-size: 1.1rem; margin-top: 4px;">کوردی: ٣ی ڕێبەندی ٢٧٢٥</div>
+            <div style="font-size: 1.1rem; margin-top: 4px;">کوردی: ٣ی ڕێبەندانی ٢٧٢٥</div>
             <div id="dateMiladi" style="opacity: 0.7; font-size: 0.9rem;"></div>
         </div>
         <div id="timerDisplay" class="countdown">چاوەڕێ بکە...</div>
