--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
         <div class="prayer-list" id="prayerList"></div>
     </div>
 
-    <div id="update-toast" class="toast">وەشانێکی نوێ بەردەستە! <button onclick="location.reload()">نوێکردنەوە</button></div>
+    <div id="update-toast" class="toast">
+    وەشانێکی نوێ بەردەستە! 
+    <button onclick="refreshApp()">نوێکردنەوە</button>
+</div>
+
     <audio id="adhanPlayer"></audio>
     <script src="script.js"></script>
 </body>
