--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>وەشانی نوێ </title>
+    <title>کاتەکانی بانگ</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -25,31 +25,33 @@
         <div class="sidebar-item" onclick="showAbout()"><i class="fas fa-info-circle"></i> دەربارە</div>
     </div>
 
-    <<div class="main-content">
-    <img src="https://i.imgur.com/vH97Nl8.png" class="mosque-bg" />
-
-    <div class="clock-box">
-        <span class="clock" id="liveClock">00:00:00</span>
-        <span class="ampm" id="ampm">AM</span>
-    </div>
-    
-    </div>
+    <div class="main-content">
+        <img src="https://i.imgur.com/vH97Nl8.png" class="mosque-bg" alt="mosque" />
+        
+        <div class="clock-box">
+            <span class="clock" id="liveClock">00:00:00</span>
+            <span class="ampm" id="ampm">AM</span>
+        </div>
 
         <div class="date-container">
-    <div class="hijri-row" id="hijriDate">کۆچی: --/--/----</div>
-    <div class="kurdish-row">
-        <span id="miladiDate">میلادی: --/--/----</span>
-        <span class="separator">|</span>
-        <span id="kurdishDate">کوردی: --/--/----</span>
-    </div>
-</div>
+            <div class="hijri-row" id="hijriDate">بارکردنی مێژووی کۆچی...</div>
+            <div class="kurdish-row">
+                <span id="miladiDate">--/--/----</span>
+                <span class="separator">|</span>
+                <span id="kurdishDate">بارکردنی مێژووی کوردی...</span>
+            </div>
+        </div>
 
         <div class="timer" id="timeLeft">...</div>
+
         <select id="citySelect" onchange="changeCity()">
             <option value="Penjwin">پێنجوێن</option>
             <option value="Sulaymaniyah">سلێمانی</option>
             <option value="Erbil">هەولێر</option>
+            <option value="Duhok">دهۆک</option>
+            <option value="Kirkuk">کەرکوک</option>
         </select>
+
         <div class="prayer-list" id="prayerList"></div>
     </div>
 
