--- a/index.html
+++ b/index.html
@@ -2,65 +2,70 @@
 <html lang="ku" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>کاتەکانی بانگ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>کاتەکانی بانگ - PRO</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <div class="navbar">
-        <div><i class="fas fa-mosque"></i> کاتەکانی بانگ</div>
-        <i class="fas fa-bars" onclick="toggleSidebar()"></i>
-    </div>
+    <nav class="navbar">
+        <div class="nav-logo"><i class="fas fa-mosque"></i> کاتەکانی بانگ</div>
+        <button class="menu-btn" onclick="toggleMenu()" aria-label="Menu">
+            <i class="fas fa-bars"></i>
+        </button>
+    </nav>
 
-    <div class="overlay" id="overlay" onclick="toggleSidebar()"></div>
+    <div class="sidebar-overlay" id="overlay" onclick="toggleMenu()"></div>
 
-    <div class="sidebar" id="sidebar">
+    <aside class="sidebar" id="sidebar">
         <div class="sidebar-header">
-            <i class="fas fa-times close-btn" onclick="toggleSidebar()"></i>
-            <h3>ڕێکخستن</h3>
+            <i class="fas fa-times close-btn" onclick="toggleMenu()"></i>
+            <h3>ڕێکخستنەکان</h3>
         </div>
         
-        <h4 style="margin-bottom: 10px;">هەڵبژاردنی بانگبێژ:</h4>
-        <div id="adhanList">
-            <div class="adhan-item" onclick="playAdhan('https://www.islamcan.com/audio/adhan/azan1.mp3')">
-                <span>مەککە (عەلی مەلا)</span> <i class="fas fa-play-circle play-icon"></i>
+        <div class="sidebar-content">
+            <label><i class="fas fa-microphone"></i> هەڵبژاردنی بانگبێژ</label>
+            <div class="adhan-grid">
+                <button onclick="playAdhan('https://www.islamcan.com/audio/adhan/azan1.mp3')">مەککە <i class="fas fa-play"></i></button>
+                <button onclick="playAdhan('https://www.islamcan.com/audio/adhan/azan2.mp3')">مەدینە <i class="fas fa-play"></i></button>
+                <button onclick="playAdhan('https://www.islamcan.com/audio/adhan/azan16.mp3')">عبدالباسط <i class="fas fa-play"></i></button>
             </div>
-            <div class="adhan-item" onclick="playAdhan('https://www.islamcan.com/audio/adhan/azan2.mp3')">
-                <span>مەدینە</span> <i class="fas fa-play-circle play-icon"></i>
-            </div>
-            <div class="adhan-item" onclick="playAdhan('https://www.islamcan.com/audio/adhan/azan16.mp3')">
-                <span>عبدالباسط</span> <i class="fas fa-play-circle play-icon"></i>
-            </div>
+            <button class="stop-btn" onclick="stopAdhan()"><i class="fas fa-stop"></i> وەستاندنی دەنگ</button>
         </div>
-    </div>
+    </aside>
 
-    <div class="main-content">
-        <div class="header-card">
-            <img src="https://i.imgur.com/vH97Nl8.png" class="mosque-bg-img" alt="">
-            <div class="clock-box">
-                <span class="clock" id="liveClock">00:00:00</span>
+    <main class="app-container">
+        <section class="hero-section">
+            <div class="mosque-overlay"></div>
+            <div class="live-info">
+                <h1 id="liveClock">00:00:00</h1>
+                <div class="date-group">
+                    <p id="kurdishDate" class="k-date">...</p>
+                    <p id="hijriDate">...</p>
+                    <p id="miladiDate">...</p>
+                </div>
             </div>
-            <div class="date-container">
-                <div id="hijriDate" class="hijri-row">...</div>
-                <div id="kurdishDate" class="kurdish-row">...</div>
-                <div id="miladiDate" style="opacity: 0.7; font-size: 0.8rem;">...</div>
-            </div>
+        </section>
+
+        <div id="nextPrayerCounter" class="countdown-box">بارکردن...</div>
+
+        <div class="city-picker">
+            <i class="fas fa-map-marker-alt"></i>
+            <select id="citySelect" onchange="updateCity()">
+                <option value="Penjwin">پێنجوێن</option>
+                <option value="Sulaymaniyah">سلێمانی</option>
+                <option value="Erbil">هەولێر</option>
+                <option value="Duhok">دهۆک</option>
+                <option value="Kirkuk">کەرکوک</option>
+            </select>
         </div>
 
-        <div id="timeLeft" class="prayer-row" style="background: none; border: 1px solid #334155; justify-content: center; color: #facc15;">...</div>
+        <div id="prayerCards" class="prayer-cards-container">
+            </div>
+    </main>
 
-        <select id="citySelect" onchange="changeCity()" style="width: 90%; max-width: 400px; padding: 12px; display: block; margin: 10px auto; border-radius: 10px; background: #1e293b; color: white;">
-            <option value="Penjwin">پێنجوێن</option>
-            <option value="Sulaymaniyah">سلێمانی</option>
-            <option value="Erbil">هەولێر</option>
-        </select>
-
-        <div id="prayerList"></div>
-    </div>
-
-    <audio id="player"></audio>
+    <audio id="adhanPlayer"></audio>
     <script src="script.js"></script>
 </body>
 </html>
