--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <aside class="sidebar" id="sidebar">
         <div class="sidebar-header">
-            <h3>ڕێکخستنەکان</h3>
             <i class="fas fa-times close-btn" onclick="toggleSidebar()"></i>
+            <h3><i class="fas fa-cog"></i> ڕێکخستنەکان</h3>
         </div>
         
         <div class="sidebar-content">
             <details class="menu-item">
-                <summary>بانگبێژەکان</summary>
+                <summary><i class="fas fa-microphone-alt"></i> بانگبێژەکان</summary>
                 <div class="adhan-options">
                     <div class="adhan-choice">
                         <label><input type="radio" name="adhan" checked> مەککە</label>
@@ -50,10 +50,10 @@
             </a>
             
             <details class="menu-item">
-                <summary>دەربارە</summary>
+                <summary><i class="fas fa-info-circle"></i> دەربارە</summary>
                 <div class="about-info">
                     <p>گەشەپێدەر: داریان</p>
-                    <p>وەشان: ٢.٣.٠</p>
+                    <p>وەشان: ٢.٤.٠</p>
                 </div>
             </details>
         </div>
@@ -73,9 +73,9 @@
             </div>
         </div>
 
-        <div id="countdown" class="timer-tag long-tag">بارکردن...</div>
+        <div id="countdown" class="timer-tag big-timer">بارکردن...</div>
 
-        <select id="citySelect" class="city-box modern-dropdown" onchange="updateCity()">
+        <select id="citySelect" class="city-box lite-dropdown" onchange="updateCity()">
             <option value="Penjwin">پێنجوێن</option>
             <option value="Sulaymaniyah">سلێمانی</option>
             <option value="Erbil">هەولێر</option>
